<resources>
    <string name="app_name">Procurement</string>
    <string name="title_activity_home">Procurement</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Orders</string>
    <string name="title_profile">Profile</string>
    <string name="title_notification">Requisition</string>
    <string name="order_status_search">Search</string>
    <string name="create_order">Create Orders</string>
    <string name="backBtn">Back Button</string>
    <!--Order Strings-->
    <string name="order_main_name">Orders</string>
    <string name="order_date_placeholder">DD/MM/YY</string>
    <string name="order_name_placeholder">Order name</string>
    <string name="order_status_placeholder">Order Status</string>
    <string name="order_add_label">Add new order</string>

    <!--Order Status-->
    <string name="approved">Approved</string>
    <string name="pending">Pending</string>
    <string name="placed">Placed</string>
    <string name="declined">Declined</string>
    <string name="draft">Draft</string>
    <string name="filter_status">Filter Status</string>
    <string name="hold">Hold</string>

    <string name="activity_title_home">Notes</string>
    <string name="msg_no_notes">No notes found!</string>
    <string name="lbl_new_note_title">New Note</string>
    <string name="lbl_edit_note_title">Edit Note</string>
    <string name="hint_enter_note">Enter your note!</string>

    <string name="msg_no_enquires">No enquires found!</string>
    <string name="lbl_new_enquiry_title">New Enquiry</string>
    <string name="lbl_edit_enquiry_title">Edit Enquiry</string>
    <string name="hint_enter_enquiry">Enter your enquiry!</string>
    <string name="hint_enter_description">Enter your description!</string>


    <string name="title_activity_requisition">Requisition Form</string>
    <string name="action_settings">Settings</string>
    <string name="title_requisition">Requisition</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="stock_array">
        <item>-- Please select a order --</item>
        <item>Bricks</item>
        <item>Stones</item>
        <item>Cement</item>
        <item>Sand</item>
        <item>Paint</item>
        <item>Putty Wall</item>
        <item>Wires</item>
        <item>Cement Mixer</item>
    </string-array>

    <string name="requisitionID">"Requisition ID : "</string>
    <string name="orderID">"Order ID           : "</string>
    <string name="orderName">"Order Name    : "</string>
    <string name="description">"Description     : "</string>
    <string name="deliveryDate">"Delivery Date  : "</string>
    <string name="orderedDate">"Ordered Date  : "</string>
    <string name="emptyString">"     "</string>
</resources>
